--- a/src/styles/contact.css
+++ b/src/styles/contact.css
@@ -6,7 +6,7 @@
 
 .contact-details {
   padding-top: clamp(4.75rem, -2.645rem + 31.5522vw, 12.5rem);
-  padding-bottom: clamp(7rem, 1.7519rem + 22.3919vw, 12.5rem);
+  padding-bottom: clamp(4.75rem, -2.645rem + 31.5522vw, 12.5rem);
 
   .accent-rectangle {
     position: absolute;
@@ -34,6 +34,21 @@
   }
 }
 
+.map {
+  margin-bottom: clamp(4.5rem, 1.5344rem + 12.6531vw, 10.3125rem);
+
+  .container {
+    width: 100%;
+  }
+
+  .map-image {
+    background-image: url("../assets/contact/mobile/image-map.png");
+    background-repeat: no-repeat;
+    background-size: cover;
+    min-height: 23rem;
+  }
+}
+
 @media (min-width: 48rem) {
   /* HERO */
   .contact-hero .big-screen-image {
@@ -54,6 +69,17 @@
       display: flex;
       align-items: center;
       justify-content: space-between;
+    }
+  }
+
+  .map {
+    .container {
+      width: 85%;
+    }
+
+    .map-image {
+      background-image: url("../assets/contact/tablet/image-map.png");
+      min-height: 35rem;
     }
   }
 }
