style contact form on mobile

--- a/src/styles/contact.css
+++ b/src/styles/contact.css
@@ -49,6 +49,61 @@
   }
 }
 
+.connect {
+  margin-bottom: 4.5rem;
+
+  h2 {
+    margin-bottom: 2.5rem;
+  }
+
+  .btn--solid {
+    border: none;
+    display: flex;
+
+    svg g {
+      stroke: var(--white);
+    }
+  }
+
+  .contact-form {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-end;
+
+    .inputs {
+      display: flex;
+      flex-direction: column;
+      align-items: flex-end;
+      justify-content: center;
+      gap: 2.75rem;
+      width: 100%;
+    }
+
+    input,
+    textarea {
+      width: 100%;
+      border: none;
+      border-bottom: 1px solid var(--very-dark-blue);
+      padding: 0 2.125rem 1.25rem;
+      font: inherit;
+      font-size: 1.25rem;
+      font-weight: 700;
+      color: inherit;
+
+      &::placeholder {
+        color: var(--light-grey);
+        font: inherit;
+      }
+
+      &:active,
+      &:focus {
+        outline: none;
+        border-width: 3px;
+      }
+    }
+  }
+}
+
 @media (min-width: 48rem) {
   /* HERO */
   .contact-hero .big-screen-image {
